Add text to top sections

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="col-10 offset-1">
                     <div class="content-section py-5 gap-2" id="hookSection">
                         <h2 class="text-largest section-title text-center mb-5">
-                            Climate Change Will Result in <strong class="">Global Consequences</strong>
+                            Climate Change Results in <strong class="">Global Consequences</strong>
                         </h2>
                         <div class="row">
                             <div class="col-md-6">
@@ -47,22 +47,26 @@
                             <div class="col-md-6">
                                 <div class="card h-100 shadow-sm">
                                     <div class="card-body">
-                                        <h5 class="card-title">Sea Level Rise</h5>
-                                        <h6 class="card-subtitle mb-2 text-muted">A side effect of melting glaciers</h6>
+                                        <h5 class="card-title section-title">Sea Level Rise</h5>
+                                        <h6 class="card-subtitle mb-2 text-muted section-subtitle">A side effect of melting glaciers</h6>
                                         <hr/>
-                                        <p class="card-text">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                            consequat.
-                                        </p>
-                                        <p class="card-text">
-                                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                                            eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                                            sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                        </p>
-<!--                                        <a href="#" class="card-link">Card link</a>-->
-<!--                                        <a href="#" class="card-link">Another link</a>-->
+                                        <ul>
+                                            <li>Average sea levels have increased over 8 inches (about 23 cm) since 1880.</li>
+                                            <li>Every year the sea rises another .13 inches (about 3.2 mm).</li>
+                                            <li>Sea level rise is <em>accelerating</em> and projected to rise by a foot
+                                                by 2050!</li>
+                                            <li>
+                                                Floods, saltwater intrusion into groundwater, and coastal property and
+                                                ecosystem destruction will become more commonplace.
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="card-footer">
+                                        <strong>Sources:</strong>
+                                        <br/>
+                                        <a href="https://www.globalchange.gov/browse/indicators/global-sea-level-rise" class="card-link">GlobalChange.gov</a>
+                                        <a href="https://climate.nasa.gov/vital-signs/sea-level/" class="card-link">U.S. NASA's Planet Vital Signs</a>
+                                        <a href="https://www.noaa.gov/news-release/us-coastline-to-see-up-to-foot-of-sea-level-rise-by-2050" class="card-link">U.S. NOAA</a>
                                     </div>
                                 </div>
                             </div>
@@ -71,24 +75,35 @@
                             <div class="col-md-6">
                                 <div class="card shadow-sm h-100">
                                     <div class="card-body">
-                                        <h5 class="card-title">Higher, Dryer Temperatures</h5>
-                                        <h6 class="card-subtitle mb-2 text-muted">
+                                        <h5 class="card-title section-title">Higher, Dryer Temperatures</h5>
+                                        <h6 class="card-subtitle mb-2 text-muted section-subtitle">
                                             Natural disasters like wildfires, droughts more common
                                         </h6>
                                         <hr/>
-                                        <p class="card-text">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                            consequat.
-                                        </p>
-                                        <p class="card-text">
-                                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                                            eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                                            sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                        </p>
-<!--                                        <a href="#" class="card-link">Card link</a>-->
-<!--                                        <a href="#" class="card-link">Another link</a>-->
+                                        <ul>
+                                            <li>2021 was the sixth-warmest year on record.</li>
+                                            <li>2013 through 2021 rank among the 10 warmest years on record.</li>
+                                            <li>Averaged across land and ocean, the 2021 surface temperature was 1.51 °F (0.84 °C) warmer than the 20th century average of 57.0 °F (13.9 °C).</li>
+                                            <li>Research shows that changes in climate create warmer, drier conditions, leading to longer and more active fire seasons.</li>
+                                            <li>Climate Change alters the natural pattern of droughts, making them more frequent, longer, and more severe.</li>
+                                        </ul>
+                                    </div>
+                                    <div class="card-footer">
+                                        <strong>Sources:</strong>
+                                        <br/>
+                                        <a class="card-link" target="_blank"
+                                           href="https://www.climate.gov/news-features/understanding-climate/climate-change-global-temperature#:~:text=Earth's%20temperature%20has%20risen%20by,based%20on%20NOAA's%20temperature%20data.">
+                                            Climate.gov</a>
+                                        <a target="_blank" class="card-link"
+                                           href="https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/global/mapping">
+                                            U.S. NOAA Global Temperature Map </a>
+                                        <a target="_blank" class="card-link"
+                                           href="https://science2017.globalchange.gov/chapter/8/">
+                                            2017 Climate Science Special Report</a>
+                                        <a target="_blank" class="card-link"
+                                           href="https://www.usgs.gov/science/science-explorer/climate/droughts-and-climate-change">
+                                            US Geological Survey
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -105,24 +120,33 @@
                             <div class="col-md-6">
                                 <div class="card shadow-sm h-100">
                                     <div class="card-body">
-                                        <h5 class="card-title">Business As Usual... Isn't Sustainable</h5>
-                                        <h6 class="card-subtitle mb-2 text-muted">
+                                        <h5 class="card-title section-title">Business As Usual... Isn't Sustainable</h5>
+                                        <h6 class="card-subtitle mb-2 text-muted section-subtitle">
                                             Resource extraction means more CO2 emissions and fewer carbon sinks
                                         </h6>
                                         <hr/>
-                                        <p class="card-text">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                            consequat.
-                                        </p>
-                                        <p class="card-text">
-                                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                                            eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                                            sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                        </p>
-<!--                                        <a href="#" class="card-link">Card link</a>-->
-<!--                                        <a href="#" class="card-link">Another link</a>-->
+                                        <strong>Deforestation</strong>
+                                        <ul>
+                                            <li>Trees absorb CO2 and release oxygen during photosynthesis.</li>
+                                            <li>When forests are growing, surplus carbon is stored in tree trunks, roots, and soil through sequestration.</li>
+                                            <li>When forests are cut down, that carbon is released as CO2.</li>
+                                        </ul>
+                                        <strong>Extraction and Combustion of Fossil Fuels</strong>
+                                        <ul>
+                                            <li>When fossil fuels are burned, they release large amounts of carbon dioxide into the air.</li>
+                                            <li>Greenhouse gases like CO2 trap heat in our atmosphere, causing global warming.</li>
+                                            <li>The burning of coal, natural gas, and oil for electricity and heat is the largest single source of global greenhouse gas emissions.</li>
+                                        </ul>
+                                    </div>
+                                    <div class="card-footer">
+                                        <strong>Sources:</strong>
+                                        <br/>
+                                        <a target="_blank" class="card-link"
+                                           href="https://www.ucsusa.org/resources/tropical-deforestation-and-global-warming">
+                                            Union of Concerned Scientists</a>
+                                        <a target="_blank" class="card-link" href="https://www.epa.gov/ghgemissions/global-greenhouse-gas-emissions-data">
+                                            U.S. Environmental Protection Agency
+                                        </a>
                                     </div>
                                 </div>
                             </div>
