Update stat with link to report

--- a/index.html
+++ b/index.html
@@ -163,7 +163,9 @@
                 </div>
                 <div class="big-stat">2/3</div>
                 <div>
-                    of the <span class="stat-highlight text-underline">total heating influence</span> of all human-produced greenhouse gases.
+                    of the
+                    <a class="text-danger" target="_blank" href="https://www.climate.gov/news-features/understanding-climate/climate-change-atmospheric-carbon-dioxide">
+                    total heating influence</a> of all human-produced greenhouse gases.
                 </div>
             </div>
     </div>
