--- a/index.html
+++ b/index.html
@@ -368,7 +368,8 @@
                             We primarily used data from
                             <a class="text-warning" href="https://github.com/owid/co2-data" target="_blank">
                                 One World in Data</a>, but supplemented it with data from the
-                            following sources: {{list any additional sources}}.
+                            following sources: <a class="text-warning" href="https://github.com/lukes/ISO-3166-Countries-with-Regional-Codes/blob/master/all/all.csv" target="_blank"> ISO Codes</a> and
+                            <a class="text-warning" href="https://gist.github.com/whatsthebeef/6361969#file-world-json" target="_blank"> World Map json data</a>
                             <!-- TODO: List additional sources in Data Sources and Credits -->
                         </div>
                         <div class="col-md-4">
