rename Bump Chart to Line Chart

--- a/index.html
+++ b/index.html
@@ -289,14 +289,14 @@
             </div>
         </div>
     </div>
-    <div class="row w-100" id="bumpchart-row">
-        <!-- BUMP CHART SECTION -->
+    <div class="row w-100" id="linechart-row">
+        <!-- LINE CHART SECTION -->
         <div class="col-12 p-5">
             <div class="row" style="min-height: 50vh;">
                 <div class="col-10 offset-1">
                     <h2 class="section-title more-line-height">And <strong class="px-3 py-1 bg-white">United States</strong> production emissions compared to the world's total over time in the following ways:</h2>
                     <h3 class="section-subtitle">Click a line to view a detailed breakdown over time</h3>
-                    <div class="content-section" id="bumpChartDiv">
+                    <div class="content-section" id="lineChartDiv">
                     </div>
                 </div>
             </div>
@@ -480,7 +480,7 @@
 <script src="js/heatMapVis.js"></script>
 <script src="js/mapVis.js"></script>
 <script src="js/radarVis.js"></script>
-<script src="js/bumpChartVis.js"></script>
+<script src="js/LineChartVis.js"></script>
 <script src="js/gaugeVis.js"></script>
 <script src="js/main.js"></script>
 </body>
