Updated section titles to have color coded country labels
Updated section titles to have color coded country labels

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     </div>
     <div class="row w-100" id="mainpoint-row">
         <div class="w-100 d-flex justify-content-center align-content-center text-center flex-column">
-                <div>The <strong class="px-3 py-1 bg-white">United States</strong> in 2019 ranks</div>
+                <div>The <strong class="usa_class">United States</strong> in 2019 ranks</div>
                 <span id="us-rank-compared-to-selected">#2 in the world</span>
                 <div id="mainpoint-suffix" class="d-inline">in global consumption emissions.</div>
         </div>
@@ -243,7 +243,7 @@
         <div class="col-12 p-5">
             <div class="row" style="min-height: 50vh;">
                 <div class="col-10 offset-1">
-                    <h2 class="section-title more-line-height">And <strong class="px-3 py-1 bg-white">United States</strong> production emissions compared to the world's total over time in the following ways:</h2>
+                    <h2 class="section-title more-line-height">And <strong class="usa_class">United States</strong> production emissions compared to the world's total over time in the following ways:</h2>
                     <h3 class="section-subtitle">Click a line to view a detailed breakdown over time</h3>
                     <div class="content-section" id="bumpChartDiv">
                     </div>
@@ -254,7 +254,7 @@
     <div class="row w-100" style="min-height: 75vh;">
         <!-- SOLUTION/RESOLUTION SECTION -->
         <div class="col-12 p-5">
-            <h2 class="section-title more-line-height">How different <strong class="px-3 py-1 bg-white">United States</strong> emission sources influence <strong class="bg-success px-2 py-1">safe levels</strong> in 2019</h2>
+            <h2 class="section-title more-line-height">How different <strong class="usa_class">United States</strong> emission sources influence <strong class="safe_class">safe levels</strong> in 2019</h2>
                                 <h3 class="section-subtitle">Check or uncheck CO2 types to see how they affect US emission totals.</h3>
                                 <br/>
             <div class="content-section" id="solutionDiv">
