--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         <div class="col-12 p-5">
             <div class="row" style="min-height: 50vh;">
                 <div class="col-10 offset-1">
-                    <h2 class="section-title more-line-height">And <strong class="usa_class">United States</strong> production emissions compared to the world's total over time in the following ways:</h2>
+                    <h2 class="section-title more-line-height">And <strong class="usa_class">United States</strong> production emissions compared to the <strong class="world_class">World</strong> total over time in the following ways:</h2>
                     <h3 class="section-subtitle">Click a line to view a detailed breakdown over time</h3>
                     <div class="content-section" id="lineChartDiv">
                     </div>
