Added verbiage on why 4% was chosen as safe level
Added verbiage on why 4% was chosen as safe level

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     <div class="col-md-6">
                         <!-- <div class="gauge-title">Comparing Safe CO2 Levels</div> -->
                         <div id="gaugeVis"></div>
-                        <div class="gauge-subtitle">*CO2 in Million Tonnes</div>
+                        <div class="gauge-subtitle">*CO2 in Million Tonnes, US population is 4% of World, so 4% was chosen as safe level</div>
                     </div>
                     <div class="col-md-6">
                         <br>
